tests/baselines/reference/namespaceNotMergedWithFunctionDefaultExport.errors.txt
replace-in-file/types/index.d.ts(2,19): error TS2395: Individual declarations in merged declaration 'replaceInFile' must be all exported or all local.
replace-in-file/types/index.d.ts(5,13): error TS2395: Individual declarations in merged declaration 'replaceInFile' must be all exported or all local.


==== replace-in-file/types/index.d.ts (2 errors) ====
    declare module 'replace-in-file' {
      export function replaceInFile(config: unknown): Promise<unknown[]>;
                      ~~~~~~~~~~~~~
!!! error TS2395: Individual declarations in merged declaration 'replaceInFile' must be all exported or all local.
      export default replaceInFile;
    
      namespace replaceInFile {
                ~~~~~~~~~~~~~
!!! error TS2395: Individual declarations in merged declaration 'replaceInFile' must be all exported or all local.
        export function sync(config: unknown): unknown[];
      }
    }